<resources>
    <string name="app_name">Story App</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>

    <!-- CustomView. -->
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="valid_email">Please input a valid email</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="password_minimum">Password must consist of minimum 8 characters</string>

    <!-- Welcome. -->
    <string name="welcome">Welcome!</string>
    <string name="greeting">Come join us and enjoy your stories in a colorful world!</string>
    <string name="greeting1">See what your friends are up to!</string>
    <string name="greeting2">Express yourself!</string>
    <string name="greeting_picture">Greeting picture</string>
    <string name="get_started">Get Started</string>

    <!-- Login. -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Log In</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="register_an_account">Register an account</string>
    <string name="login_failed">Login failed, please try again!</string>
    <string name="login_success">Login successful!</string>

    <string name="join_us">Join Us!</string>
    <string name="introduction">Explore your story world to color this world with your story!</string>
    <string name="register_this_account">Register this account</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_instead">Login instead</string>
    <string name="register_success">Registration successful!</string>
    <string name="register_failed">Registration failed!</string>
    <string name="setting_language">Setting Language</string>
    <string name="logout">Logout</string>

    <!-- Settings. -->
    <string name="settings_title">Settings</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Home. -->
    <string name="retry">Try Again</string>
    <string name="story_picture">Story picture</string>
    <string name="placeholder_user">User Name</string>
    <string name="placeholder_description">This is the description</string>
    <string name="post_a_picture">Post a picture</string>
    <string name="error_list">An error occurred,  please wait!.</string>
    <string name="error_occurred">An error has occurred!</string>
    <string name="permission_needed">Permission needed to use camera</string>

    <!-- Detail. -->
    <string name="expand_description">Expand description</string>


    <string name="empty_field">Please fill the %s field!</string>
    <string name="error_email">Email address is not valid</string>
    <string name="error_password">Password minimum 8 characters</string>
    <string name="login_failed_message">Login failed, please try again!</string>

    <!-- Camera. -->
    <string name="take_picture">Take picture</string>
    <string name="rotate_camera">Rotate camera</string>
    <string name="open_gallery">Open gallery</string>
    <string name="wait_for_processing">Wait until processing is done</string>
    <string name="failed_capture_image">Failed to capture image</string>
    <string name="camera_failed">Failed to open camera</string>

    <!-- Post. -->
    <string name="post">Post</string>
    <string name="enter_description">Enter a description</string>
    <string name="post_the_picture">Post the picture</string>
    <string name="expand_image">Expand image</string>
    <string name="description_cannot_empty">Description cannot be empty</string>
    <string name="image_posted">Image has been posted</string>
    <string name="please_active_location">Please activate your location service!</string>
    <string name="upload_success">Story uploaded successfully!</string>
    <string name="upload_failed">Story failed to upload!</string>
    <string name="on_location">Turn on Location</string>


</resources>