<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_post_scene"
    tools:context=".ui.post.PostActivity">

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/story_picture"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/ed_add_description"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Description"
        android:background="@drawable/description_container"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine|textPersonName"
        android:padding="16dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_post"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/post_the_picture"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="@+id/ed_add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_container"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/expand_image"
        app:layout_constraintEnd_toEndOf="@+id/img_story"
        app:srcCompat="@drawable/circle_container" />

    <ImageView
        android:id="@+id/img_expand"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/expand_image"
        app:layout_constraintBottom_toBottomOf="@+id/img_container"
        app:layout_constraintEnd_toEndOf="@+id/img_container"
        app:layout_constraintStart_toStartOf="@+id/img_container"
        app:layout_constraintTop_toTopOf="@+id/img_container"
        app:srcCompat="@drawable/ic_open_in_full" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/img_container"
        app:layout_constraintEnd_toStartOf="@+id/img_container"
        app:layout_constraintTop_toTopOf="@+id/img_container" />

    <TextView
        android:id="@+id/tv_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:paddingHorizontal="24dp"
        android:text="@string/error_list"
        android:textColor="@color/blue_255"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_map_permission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:paddingHorizontal="24dp"
        android:text="@string/on_location"
        android:textColor="@color/blue_255"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>